REGRESSION(r282686) [GTK] Tests are flaky due to spurious "MainFrameView: mouseEnteredContentArea" messages in the log https://bugs.webkit.org/show_bug.cgi?id=232142

Add MockScrollAnimatorEnabled to the list of preferences to reset
between tests in TestOptions.cpp.

Patch by Arcady Goldmints-Orlov <agoldmints@igalia.com> on 2021-10-24
Reviewed by Carlos Garcia Campos.

* WebKitTestRunner/TestOptions.cpp:
(WTR::TestOptions::defaults):

Canonical link: https://commits.webkit.org/243474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284765 268f45cc-cd09-0410-ab3c-d52691b4dbfc